<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2019 The TensorFlow Authors. All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentTop="true"
                android:background="@android:color/white">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tfl2_logo_dark" />
            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:layout_gravity="center_horizontal"
                android:background="@color/tfe_color_primary"
                android:padding="10dp"
                android:text="@string/speech_word_prompt"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/textView"
                android:layout_marginBottom="100dp"
                android:orientation="vertical"
                android:weightSum="5">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/yes"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight=".5"
                        android:background="@drawable/round_corner_text_bg_unselected"
                        android:gravity="center"
                        android:text="@string/yes"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/no"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight=".5"
                        android:background="@drawable/round_corner_text_bg_unselected"
                        android:gravity="center"
                        android:text="@string/no"
                        android:textColor="#000" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/up"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight=".5"
                        android:background="@drawable/round_corner_text_bg_unselected"
                        android:gravity="center"
                        android:text="@string/up"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/down"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight=".5"
                        android:background="@drawable/round_corner_text_bg_unselected"
                        android:gravity="center"
                        android:text="@string/down"
                        android:textColor="#000" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/left"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight=".5"
                        android:background="@drawable/round_corner_text_bg_unselected"
                        android:gravity="center"
                        android:text="@string/left"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/right"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight=".5"
                        android:background="@drawable/round_corner_text_bg_unselected"
                        android:gravity="center"
                        android:text="@string/right"
                        android:textColor="#000" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/on"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight=".5"
                        android:background="@drawable/round_corner_text_bg_unselected"
                        android:gravity="center"
                        android:text="@string/on"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/off"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight=".5"
                        android:background="@drawable/round_corner_text_bg_unselected"
                        android:gravity="center"
                        android:text="@string/off"
                        android:textColor="#000" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/stop"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight=".5"
                        android:background="@drawable/round_corner_text_bg_unselected"
                        android:gravity="center"
                        android:text="@string/stop"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/go"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight=".5"
                        android:background="@drawable/round_corner_text_bg_unselected"
                        android:gravity="center"
                        android:text="@string/go"
                        android:textColor="#000" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <include
            android:id="@+id/bottom_sheet_layout"
            layout="@layout/tfe_sc_layout_bottom_sheet" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
